--- a/modelconfig/config.json
+++ b/modelconfig/config.json
@@ -6,13 +6,13 @@
         "bpe": "fastbpe",
         "bpe_codes":"bpecodes",
         "path_to_data":".",
-        "gpu":true
+        "gpu":false
     },
     "qg_model": {
         "model": "qg_copy_attn_epoch10.pt",
         "beam_size": 5,
         "replace_unknown":true,
         "batch_size":30,
-        "gpu":0
+        "gpu":-1
     }
 }
